src/styles.css
html, body{
     /* Remove default browser margins */
    margin: 0;
    padding: 0;

    /* Main fonts */
    --headerFont: "Jaro";
    --bodyFont: Arial;
    --headerSize: 2rem;
    --bodySize: 1rem;
    /* Main Colors */
    --mainOrange: #dd4b1b;
    --baseBlack: #25343f;
    --darkBlack: #202e38;
    --darkestBlack: #1b262d;
    --baseWhite: #e1efef;
    --darkWhite: #c4c9c9;
    --baseRed: #d5010c;
    --baseYellow: #d58e0a;
    --baseGreen: #62d50a;

    /* Setting the height and width*/
    height: 100vh;
    width: 100vw;
}

/*Main Content Styles*/
#content{
    background-color: var(--baseWhite);
    display: grid;
    grid-template-columns: 1fr 4fr;
    height: 100%;
    width: 100%;
}

/*Sidebaar styles*/
#sidebar{
  background-color: var(--baseBlack);
  display: grid; /*Subject to change*/
  grid-column: 1 / 2;
  grid-template-rows: 1fr 3fr 0.5fr;
  height: 100%;
  width: 100%;
}

#sidebar #logo{
  align-self: center;
  grid-row: 1 / 2;
  justify-self: center;
}

#projects{
  grid-row: 2 / 3;
  padding: 0 12px 0 12px;
}

#projects p{
  color: white;
  display: flex;
  flex-direction: column;
  font-family: var(--headerFont), var(--bodyFont);
  font-size: var(--headerSize);
  justify-self: center;
}

#projects .scrollable{
  background-color: var(--darkBlack);
  border-radius: 10px;
  box-sizing: border-box;
  height: 79%;
  padding: 0 8px 0 8px;
}

.projectItem{
  align-items: center;
  background-color: var(--darkestBlack);
  border-radius: 10px;
  box-sizing: border-box;
  color: white;
  display: flex;
  font-family: var(--headerFont), var(--bodyFont);
  font-size: var(--bodySize);
  height: 10%;
  justify-content: space-between;
  margin-top: 24px;
  opacity: 0.7;
  padding: 0 4px 0 4px;
  transition: all 0.3s ease;
  width: 100%;
}

.selectedProject{
  background-color: var(--mainOrange);
}

.projectItem:hover{
  cursor: pointer;
  filter: brightness(1.3);
  transform: scale(1.05);
}

.projectItemLeft{
  align-items: center;
  display: flex;
  gap: 1rem;
  pointer-events: none;
}

.projectItemRight{
  align-items: center;
  display: flex;
}

#sidebar .addBtn{
  align-self: center;
  grid-row: 3 / 4;
  height: auto;
  justify-self: end;
  margin-right: 8px;
  transition: all 0.3s ease;
}

#sidebar .addBtn:hover{
  filter: brightness(1.3);
  transform: scale(1.2);
}

/*Scrollable Styles and Logic*/
.scrollable{
  width: 100%;
  overflow-y: auto;
}

/* Add btn Styles*/
.addBtn{
  border: 0;
  height: auto;
  width: 60px;
}

/* edit and delete button styles */
.deleteBtn,
.editBtn{
  transition: all 0.3s ease;
}

.deleteBtn:hover,
.editBtn:hover{
  filter: brightness(1.3);
  transform: scale(1.2);
}

/* Close button styles*/
.closeBtn{
  grid-row: 1 / 2;
  justify-self: end;
  transition: all 0.3s ease;
}

.closeBtn:hover{
  cursor: pointer;
  filter: brightness(1.3);
  transform: scale(1.2);
}

/* Save button styles */
.saveBtn{
  background-color: var(--mainOrange);
  border: 0;
  border-radius: 10px;
  color: white;
  font-family: var(--bodyFont);
  font-size: var(--bodySize);
  height: 3rem;
  width: 20%;
  transition: all 0.3s ease;
}

.saveBtn:hover{
  cursor: pointer;
  filter: brightness(1.3);
  transform: scale(1.2);
}

/* Base Modal styles */
dialog[open]{
  align-self: center;
  align-items: center;
  background-color: var(--baseBlack);
  border: 0;
  border-radius: 10px;
  box-sizing: border-box;
  display: grid;
  gap: 12px;
  grid-template-rows: 1fr 3fr 1fr;
  height: 200px;
  position: fixed;
  z-index: 0;
  overflow: hidden;
}

dialog::backdrop{
  background-color: rgba(0, 0, 0, 0.5);
}
/* Edit Modal Styles */
.modalHeader{
  color: white;
  font-family: var(--headerFont), var(--bodyFont);
  font-size: var(--headerSize);
  grid-row: 1 / 2;
}

dialog form{
  display: flex;
  grid-column: 1 / 3;
  grid-row: 2 / 3;
  justify-content: space-between;
  width: 100%;
}

.formInput{
  background-color: var(--darkBlack);
  border: 0;
  border-radius: 10px;
  color: white;
  font-family: var(--bodyFont);
  height: 3rem;
  width: 70%;
}

/*Dashboard styles*/
#dashboard{
  grid-column: 2 / 3;
  height: 100%;
}

